playground-kubeernetes/04-test-with-demo/01-demo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rancher-demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: rancher-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rancher-demo
    spec:
      containers:
      - image: monachus/rancher-demo:latest
        name: rancher-demo
